--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -26,7 +26,13 @@
     <div class="signinpanel">
         <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
-            <div class="col-sm-6"></div>
+            <div class="col-sm-4 col-sm-offset-2">
+                <div class="qiyulogo col-sm-10 col-sm-offset-1"><img src="../assets/img/Qiyu.png" alt="" class="img-responsive"></div>
+                <div class="col-sm-12 qiyubtnbox">
+                    <a href="https://www.smaty.net/" class="col-xs-12 col-sm-5"><i class="fa fa-hand-o-right"></i>官网</a>
+                    <a href="https://shuka.smaty.net/t/xapimanager" class="col-xs-12 col-sm-5 col-sm-offset-2"><i class="fa fa-hand-o-right"></i>操作手册</a>
+                </div>
+            </div>
             <div class="col-sm-4">
                 <div class="navbar-brand block m" style="font-size:26px;">{{ .website.title }}</div>
                     <form name="form" id="loginForm" method="post">
