--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -11,7 +11,7 @@
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
                         <a class="navbar-minimalize minimalize-styl-2" href="#"><i class="fa fa-align-justify"></i> </a>
-                        <a class="dropdown-toggle minimalize-styl-2" href="https://shuka.smaty.net/t/xapimanager" target="_blank">操作手册</a>
+                        <a class="dropdown-toggle minimalize-styl-2" href="http://www.opiping.com" target="_blank">客户端下载</a>
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li class="dropdown">
